# django_minesweeper

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/accounts/: email.py  serializers.py  tests.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_is_active_and_more.py
backend/accounts/models/: __init__.py  user.py
backend/accounts/services/: __init__.py  get_user_from_oauth.py  verify_google_access_token.py  verify_google_jwt.py
backend/accounts/views/: __init__.py  email_views.py  google_auth_view.py
backend/backend/: auto_docs.py  celery.py  formatters.py  setup.py  urls.py
backend/backend/settings/: __init__.py  base.py  debug.py  production.py
backend/configs/: backend.conf  celery.conf  gunicorn.conf.py
backend/minesweeper/: admin.py  apps.py  constants.py  filters.py  permissions.py  signals_handlers.py  tasks.py  tests.py  urls.py
backend/minesweeper/cache/: __init__.py  base.py  player.py
backend/minesweeper/migrations/: 0001_initial.py  0002_player_averange_resoult_alter_player_top_5_scores_and_more.py  0003_alter_player_user.py  0004_alter_player_top_5_scores.py  0005_player_success_games.py  0006_alter_player_options.py  0007_alter_player_success_games.py  0008_alter_player_success_games.py  0009_alter_player_averange_resoult_and_more.py  0010_alter_player_averange_resoult.py
backend/minesweeper/models/: __init__.py  player.py
backend/minesweeper/serializers/: __init__.py  players_serializer.py
backend/minesweeper/services/: __init__.py  add_new_success_score.py  (+2 more)
(+13 files in other folders)
