[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vadym Stepanenko <vadymstepanenkomail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
Faker = "^24.9.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
django-silk = "0.5.2"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}
setuptools = "^69.5.1"
redis = "^5.0.3"
djoser = "^2.2.2"
djangorestframework = "^3.15.1"
google-api-python-client = "^2.126.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
